--- a/src/Makefile.sources
+++ b/src/Makefile.sources
@@ -35,7 +35,7 @@ OVERFLOWCHSRC = \
     constraintList.c \
     constraintResolve.c \
     constraintOutput.c \
-    forjunk.c 
+    loopHeuristics.c 
     
 GENERALSRC =  \
     exprData.c \
